--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,12 @@
 FROM python:3.10-slim
 
-WORKDIR /backend
+WORKDIR /app
 
+# Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY app app
+# Copy source
+COPY . .
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
