--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   chatbot:
     build: .
@@ -8,3 +6,6 @@ services:
       - "8000:8000"
     env_file:
       - .env
+    volumes:
+      - .:/app
+    restart: unless-stopped
